[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/coolvetica rg.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Conclusion.gd" type="Script" id=2]
[ext_resource path="res://fonts/Carlito-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 1 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Instructions" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 16.0
margin_top = 131.0
margin_right = 1008.0
margin_bottom = 251.0
rect_pivot_offset = Vector2( -336, 32 )
custom_fonts/font = SubResource( 1 )
text = "Thanks for participating!

We have a couple of questions for you to answer before you leave."
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="."]
margin_left = 384.0
margin_top = 416.0
margin_right = 640.0
margin_bottom = 480.0
custom_fonts/font = SubResource( 2 )
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NoThanks" type="Button" parent="."]
margin_left = 384.0
margin_top = 496.0
margin_right = 640.0
margin_bottom = 560.0
custom_fonts/font = SubResource( 2 )
text = "No Thanks"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttonTimer" type="Timer" parent="."]
[connection signal="pressed" from="Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="NoThanks" to="." method="_on_NoThanks_pressed"]
[connection signal="timeout" from="buttonTimer" to="." method="_on_buttonTimer_timeout"]
